overflow scroll fix

--- a/title/index.css
+++ b/title/index.css
@@ -181,14 +181,14 @@ table#chapters {
      border-radius: 5px;
      background-color: rgb(30, 30, 30);
      box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.3);
-     margin: 25px;
+     margin: 0px 25px 25px 25px;
 }
 
 .rightDiv {
-     overflow-y: scroll;
+     overflow-y: scroll !important;
      display: block;
      height: calc(100vh - 25vw - 75px - 10px - 10px);
-     margin-top: 1vw;
+     margin-top: calc(1vw + 25px);
 }
 
 .table-header {
